@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-31T08:19:37Z",
+  "timestamp" : "2022-03-31T16:24:56Z",
   "count_outdated" : 91,
   "uniques_outdated" : 62,
-  "count" : 156,
-  "uniques" : 101,
+  "count" : 158,
+  "uniques" : 102,
   "clones" : [
     {
       "timestamp": "2022-03-21T00:00:00Z",
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 0, 7 ],
-      "uniques": 5,
-      "uniques_minmax": [ 0, 5 ]
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
