@@ -1,5 +1,5 @@
 {
-  "count": 65,
+  "count": 67,
   "uniques": 22,
   "clones": [
     {
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-03-31T00:00:00Z",
-      "count": 7,
-      "uniques": 5
+      "count": 9,
+      "uniques": 6
     }
   ]
 }
